package com.team.abstractfactory;

/**
 * java_learn_note
 *
 * @author zhangbc
 * @version v1.0.0
 * @date 3/27/23 1:09 AM
 **/
public class Ak47 extends Weapon {
    @Override
    public void shoot() {
        System.out.println("AK47 shoot...");
    }
}
