package com.team.abstractfactory;

/**
 * java_learn_note
 *
 * @author zhangbc
 * @version v1.0.0
 * @date 3/27/23 1:10 AM
 **/
public class Bread extends Food {
    @Override
    public void printName() {
        System.out.println("This is HB bread.");
    }
}
