package com.team.abstractfactory;

/**
 * java_learn_note
 *
 * @author zhangbc
 * @version v1.0.0
 * @date 3/27/23 1:08 AM
 **/
public class Car extends Vehicle {
    @Override
    public void go() {
        System.out.println("Car go www...");
    }
}
