package com.team.abstractfactory;

/**
 * java_learn_note
 *
 * @author zhangbc
 * @version v1.0.0
 * @date 3/27/23 11:09 PM
 **/
public abstract class Food {
    /**
     * printName
     */
    abstract void printName();
}
